Add the batch limit in the documentation

--- a/docs/1.0/api/account/index.textile
+++ b/docs/1.0/api/account/index.textile
@@ -234,6 +234,7 @@ p. Create and Update several accounts in a row.
 h3. Resource Information
 
 * Rate limited: Yes
+* Batch limit: {{ site.api.batch_limit }}
 * Authentication: Required
 * HTTP Methods: PUT
 * Body Format: JSON
@@ -259,6 +260,7 @@ h2.  DELETE accounts
 p. Delete several accounts in a row
 
 * Rate limited: Yes
+* Batch limit: {{ site.api.batch_limit }}
 * Authentication: Required
 * HTTP Methods: DELETE
 * Body Format: JSON
