--- a/docs/1.0/api/project/index.textile
+++ b/docs/1.0/api/project/index.textile
@@ -151,6 +151,7 @@ p. Create and Update several projects in a row.
 h3. Resource Information
 
 * Rate limited: Yes
+* Batch limit: {{ site.api.batch_limit }}
 * Authentication: Required
 * HTTP Methods: PUT
 * Body Format: JSON
@@ -177,6 +178,7 @@ h2.  DELETE projects
 p. Delete several projects in a row
 
 * Rate limited: Yes
+* Batch limit: {{ site.api.batch_limit }}
 * Authentication: Required
 * HTTP Methods: DELETE
 * Body Format: JSON
