--- a/docs/1.0/api/index.textile
+++ b/docs/1.0/api/index.textile
@@ -5,31 +5,31 @@ title: "- REST API V1.0 Resources"
 
 h1(#resources). REST API v1.0 Resources
 
-p(title). "Accounts":account/#format
+p(title). "Customers":customer/#format
 
-p(caption). Accounts are collections of accounts (leads and customers).
-
-|_(thead first). Type |_(thead). Description |
-|"GET accounts/:id":account/#account_get|Returns all the information about the account.|
-|"PUT accounts/:id":account/#account_put|Update a single account.|
-|"DELETE accounts/:id":account/#account_delete|Deletes a single account. Also delete all of his contacts.|
-|"GET accounts":account/#accounts_get|Returns the list of all your accounts.|
-|"POST accounts":account/#accounts_post|Create a single account.|
-|"PUT accounts":account/#accounts_put|Create and Update several accounts in a row.|
-|"DELETE accounts":account/#accounts_delete|Delete several accounts in a row.|
-
-p(title). "Account Contacts":account_contact/#format
-
-p(caption). Account contacts belongs to a particular account. The _account_id_ in the URI defines which account.
+p(caption). Customers are collections of customers and leads.
 
 |_(thead first). Type |_(thead). Description |
-|"GET accounts/:account_id/contacts/:id":account_contact/#account_contact_get|Returns all the information about the account contact. This contact should belongs to the account _account_id_.|
-|"PUT accounts/:account_id/contacts/:id":account_contact/#account_contact_put|Update a single account contact. This contact should belongs to the account _account_id_.|
-|"DELETE accounts/:account_id/contacts/:id":account_contact/#account_contact_delete|Deletes a single account contact. This contact should belongs to the account _account_id_.|
-|"GET accounts/:account_id/contacts":account_contact/#account_contacts_get|Returns all the contacts that belongs to the account _account_id_.|
-|"POST accounts/:account_id/contacts":account_contact/#account_contacts_post|Create a single account contact. This contact will belongs to the account _account_id_.|
-|"PUT accounts/:account_id/contacts":account_contact/#account_contacts_put|Create and Update several account contacts in a row. All should or will belongs to the account _account_id_.|
-|"DELETE accounts/:account_id/contacts":account_contact/#account_contacts_delete|Delete several account contacts in a row. Those contacts should belongs to the account _account_id_.|
+|"GET customers/:id":customer/#customer_get|Returns all the information about the customer or lead.|
+|"PUT customers/:id":customer/#customer_put|Update a single customer or lead.|
+|"DELETE customers/:id":customer/#customer_delete|Deletes a single customer or lead. Also delete all of his contacts.|
+|"GET customers":customer/#customers_get|Returns the list of all your customers and leads.|
+|"POST customers":customer/#customers_post|Create a single customer or lead.|
+|"PUT customers":customer/#customers_put|Create and Update several customers or leads in a row.|
+|"DELETE customers":customer/#customers_delete|Delete several customers or leads in a row.|
+
+p(title). "Customer Contacts":customer_contact/#format
+
+p(caption). Customer contacts belongs to a particular customer. The _account_id_ in the URI defines which customer.
+
+|_(thead first). Type |_(thead). Description |
+|"GET customers/:account_id/contacts/:id":customer_contact/#customer_contact_get|Returns all the information about the account contact. This contact should belongs to the account _account_id_.|
+|"PUT customers/:account_id/contacts/:id":customer_contact/#customer_contact_put|Update a single account contact. This contact should belongs to the account _account_id_.|
+|"DELETE customers/:account_id/contacts/:id":customer_contact/#customer_contact_delete|Deletes a single account contact. This contact should belongs to the account _account_id_.|
+|"GET customers/:account_id/contacts":customer_contact/#customer_contacts_get|Returns all the contacts that belongs to the account _account_id_.|
+|"POST customers/:account_id/contacts":customer_contact/#customer_contacts_post|Create a single account contact. This contact will belongs to the account _account_id_.|
+|"PUT customers/:account_id/contacts":customer_contact/#customer_contacts_put|Create and Update several account contacts in a row. All should or will belongs to the account _account_id_.|
+|"DELETE customers/:account_id/contacts":customer_contact/#customer_contacts_delete|Delete several account contacts in a row. Those contacts should belongs to the account _account_id_.|
 
 p(title). "Projects":project/#format
 
