Rename 'Chart of Accounts' into 'Accounts'.

--- a/docs/1.0/api/accounting_entry/index.textile
+++ b/docs/1.0/api/accounting_entry/index.textile
@@ -13,8 +13,7 @@ p. Accounting entries are the main content of any Accounting transaction. They m
 | label | Description of that entry | {{ site.format.type.string128 }} |  | Empty String |
 | amount | This entry's amount | {{ site.format.type.double }} | Positive, will be rounded to two decimal places | {{ site.format.mandatory }} |
 | way | Defines if the amount is a Debit or a Credit | {{ site.format.type.string }} | "debit" or "credit" | {{ site.format.mandatory }} |
-| account | The accounting account | {{ site.format.type.long }} | IDs from "Chart of Accounts":/docs/1.0/api/chart_of_accounts/#chart_of_accounts_get
-(isFamily = false only) | {{ site.format.mandatory }} |
+| account | The accounting account | {{ site.format.type.long }} | IDs from "Accounts":/docs/1.0/api/accounts/#accounts_get (isFamily = false only) | {{ site.format.mandatory }} |
 | account_label | The number and label of the accounting account | {{ site.format.type.string }} | {{ site.format.read_only }} | {{ site.format.non_available }} |
 | lettering | The lettering of this entry | {{ site.format.type.string64 }} |  | Empty String |
 
