Remove deprecated fields from json samples.

--- a/docs/1.0/api/customer_contact/index.textile
+++ b/docs/1.0/api/customer_contact/index.textile
@@ -48,8 +48,6 @@ p. JSON response sample
     "localisation": "California",
     "full_address": "21 Backer street Building D Fifth Floor San Francisco CA 94109 USA"
   },
-  "notes": "A contact that worth to know.\nLike to surf.",
-  "department": 1,
-  "position": 1
+  "notes": "A contact that worth to know.\nLike to surf."
 }
 {% endhighlight %}
