--- a/docs/1.0/api/order_line/index.textile
+++ b/docs/1.0/api/order_line/index.textile
@@ -10,16 +10,10 @@ h1(blue). Order Line Format
 
 h3. General
 
-p. In myERP, order lines are used in several places to register an order of a product or service, where information like price, quantity, etc... are requiered. So, in the API, order lines are embeded into their own JSON format, and follow the same rules everywhere.
+p. Order lines are product or service lines that are embeded within sales or purchases documents. They contain infos like price, quantity, description, etc...
+While adding, removing or updating an order line, related values on the contextual document will be updated accordingly.
 
-h3. Context
-
-p. Order lines don't exist on their own. They exist within a context. They are _inner objects_ embeded into other data and in order to access them you have to declare the context within the URI, like _invoices/154/order_lines/257_.
-
-h3. Available contexts
-
-|_. Context |_. Context URI |_. URI sample |
-| "Sales Order":/docs/1.0/api/sales_order/#format | sales_orders/:sales_order_id | sales_orders/5/order_lines/17 |
+You can find Order Line into "Sales Orders":sales_order/#format.
 
 
 h3. Format
@@ -36,194 +30,3 @@ h3. Format
 | is_taxable | Shall the tax be applied ? (US only) | {{ site.format.type.boolean }} | true: The _tax_ is applied
 false: The _tax_ is ignored | false |  |
 | total | Total before taxes and discount | {{ site.format.type.double }} | {{ site.format.read_only }} | {{ site.format.non_available }} |=. {{ site.format.non_editable }} |
-
-
-
-span(anchor#order_line_get). ~
-
-h2. GET ../order_lines/:id
-
-p. Returns all the information about a single order line.
-
-h3. Resource Information
-
-* Rate limited: Yes
-* Authentication: Required
-* HTTP Methods: GET
-* Response Format: JSON
-
-h3. Example Request
-
-{% highlight bash %}
-curl -X GET {{ site.api.base_url }}{{ site.api.v1}}/..{{ site.resource.order_lines.url}}/:id {{site.api.auth_pattern}}
-{% endhighlight %}
-
-p. JSON response sample
-
-{% highlight bash %}
-{
-  "id": 847,
-  "external_id": "NIN-WII-005",
-  "item": 463,
-  "description": "Nintendo WiiU\nBlack",
-  "quantity": 5.0,
-  "unit_price_wt": 299.99,
-  "discount_rate": 0.0,
-  "isTaxable": false,
-  "total": 1499.95
-}
-{% endhighlight %}
-
-
-
-span(anchor#order_line_put). ~
-
-h2. PUT ../order_lines/:id
-
-p. Update a single order line. Related values on the contextual document will be updated accordingly.
-
-h3. Resource Information
-
-* Rate limited: Yes
-* Authentication: Required
-* HTTP Methods: PUT
-* Body Format: JSON
-* Response Format: JSON
-* Non editable fields: id, item, total
-
-h3. Example Request
-
-{% highlight bash %}
-curl -X PUT {{ site.api.base_url }}{{ site.api.v1}}/..{{ site.resource.order_lines.url}}/:id {{site.api.auth_pattern}} -H 'Content-Type: application/json' -T fieldsToUpdate.json
-{% endhighlight %}
-
-p. JSON response
-
-The up-to-date JSON of the order line you've just modfied.
-
-
-span(anchor#order_line_delete). ~
-
-h2. DELETE ../order_lines/:id
-
-p. Removes a single order line from the contextual document. Related values on the contextual document will be updated accordingly.
-
-h3. Resource Information
-
-* Rate limited: Yes
-* Authentication: Required
-* HTTP Methods: DELETE
-* Response Format: JSON
-
-h3. Example Request
-
-{% highlight bash %}
-curl -X DELETE {{ site.api.base_url }}{{ site.api.v1}}/..{{ site.resource.order_lines.url}}/:id {{site.api.auth_pattern}}
-{% endhighlight %}
-
-p. JSON response
-
-The JSON of the order line you've just deleted.
-
-
-span(anchor#order_lines_get). ~
-
-h2.  GET ../order_lines
-
-p. Returns the list of all order lines that belongs to the contextual document.
-
-h3. Resource Information
-
-* Rate limited: Yes
-* Authentication: Required
-* HTTP Methods: GET
-* Body Format: JSON
-* Response Format: JSON
-
-h3. Example Request
-
-{% highlight bash %}
-curl -X GET {{ site.api.base_url }}{{ site.api.v1}}/..{{ site.resource.order_lines.url}} {{site.api.auth_pattern}}
-{% endhighlight %}
-
-p. JSON response
-
-The list of all the order lines from the contextual document, in a JSON format.
-
-
-span(anchor#order_lines_post). ~
-
-h2. POST ../order_lines
-
-p. Add a single order line to the contextual document. Related values on the contextual document will be updated accordingly.
-
-h3. Resource Information
-
-* Rate limited: Yes
-* Authentication: Required
-* HTTP Methods: POST
-* Body Format: JSON
-* Response Format: JSON
-* Mandatory fields : item
-
-h3. Example Request
-
-{% highlight bash %}
-curl -X POST {{ site.api.base_url }}{{ site.api.v1}}/..{{ site.resource.order_lines.url}} {{site.api.auth_pattern}} -H 'Content-Type: application/json' -T newOrderLine.json
-{% endhighlight %}
-
-p. JSON response
-
-The complete JSON of the order line, as it was created by the system.
-
-
-span(anchor#order_lines_put). ~
-
-h2. PUT ../order_lines
-
-p. Update and Add several order lines to the contextual document in a row. Related values on the contextual document will be updated accordingly.
-
-h3. Resource Information
-
-* Rate limited: Yes
-* Batch limit: {{ site.api.batch_limit }}
-* Authentication: Required
-* HTTP Methods: PUT
-* Body Format: JSON
-* Response Format: JSON
-* Mandatory fields for creation: item
-* Non editable fields for edition: id, item, total
-
-h3. Example Request
-
-{% highlight bash %}
-curl -X PUT {{ site.api.base_url }}{{ site.api.v1}}/..{{ site.resource.order_lines.url}} {{site.api.auth_pattern}} -H 'Content-Type: application/json' -T listOfOrderLines.json
-{% endhighlight %}
-
-p. JSON response
-
-A JSON list made of up-to-date info of order lines successfully edited or added, and error messages for unsuccessful ones.
-
-
-span(anchor#order_lines_delete). ~
-
-h2.  DELETE ../order_lines
-
-p. Remove several order lines in a row from the contextual document. Related values on the contextual document will be updated accordingly.
-
-* Rate limited: Yes
-* Batch limit: {{ site.api.batch_limit }}
-* Authentication: Required
-* HTTP Methods: DELETE
-* Body Format: JSON
-* Response Format: JSON
-
-h3. Example Request
-
-{% highlight bash %}
-curl -X DELETE {{ site.api.base_url }}{{ site.api.v1}}/..{{ site.resource.order_lines.url}} {{site.api.auth_pattern}} -H 'Content-Type: application/json' -T listOfIDsToDelete.json
-{% endhighlight %}
-
-p. JSON response
-
-A JSON list made of the info of order lines successfully deleted, and error messages for unsuccessful ones.
