--- a/docs/1.0/glossary/index.textile
+++ b/docs/1.0/glossary/index.textile
@@ -21,7 +21,7 @@ p(caption). Data type that can be send within JSON files.
 (#date).| *Date* | Date format that should match dd-MM-yyyy. e.g. 26-06-2013. |
 (#address).| *Address* | In the API, Addresses got their own JSON format.
 Cick "here":/docs/1.0/api/address/#format for further details.  |
-(#order_line).| *Order Line* | In the API, Order Lines got their own JSON format, and share it for Estimate, Orders, Invoices, etc...
+(#order_line).| *Order Line* | In the API, Order Lines got their own JSON format, and share it for Estimate, "Sales Orders":/docs/1.0/api/sales_order/#sales_order_format, Invoices, etc...
 Cick "here":/docs/1.0/api/order_line/#format for further details.  |
 (#entry).| *Entry* | Entries are the main content of any "Transaction":/docs/1.0/api/transaction/#transaction_format. They mostly define the amount of the transaction (rounded to two decimal places). They are not editable.
 Cick "here":/docs/1.0/api/entry/#format for further details.  |
