On addresses, zip code is actually zip_code.

--- a/docs/1.0/api/customer/index.textile
+++ b/docs/1.0/api/customer/index.textile
@@ -80,7 +80,7 @@ p. JSON response sample (Company with no Contacts)
     "label1": "567  Sutter St.",
     "label2": "",
     "label3": "",
-    "zipcode": "94102",
+    "zip_code": "94102",
     "city": "San Francisco",
     "country": "United States",
     "localisation": "California",
@@ -91,7 +91,7 @@ p. JSON response sample (Company with no Contacts)
     "label1": "567  Sutter St.",
     "label2": "",
     "label3": "",
-    "zipcode": "94102",
+    "zip_code": "94102",
     "city": "San Francisco",
     "country": "United States",
     "localisation": "California",
