--- a/docs/1.0/api/address/index.textile
+++ b/docs/1.0/api/address/index.textile
@@ -15,7 +15,7 @@ p. In myERP, addresses are used at several places. Accounts, Suppliers, Contacts
 | label1 | First line of the address | {{ site.format.type.string255 }} |  | Empty String |  |
 | label2 | Second line of the address | {{ site.format.type.string255 }} |  | Empty String |  |
 | label3 | Third line of the address | {{ site.format.type.string255 }} |  | Empty String |  |
-| zipcode | The zipcode code | {{ site.format.type.string128 }} |  | Empty String |  |
+| zip_code | The zipcode code | {{ site.format.type.string128 }} |  | Empty String |  |
 | city | The city name | {{ site.format.type.string128 }} |  | Empty String |  |
 | country | The country name | {{ site.format.type.string128 }} |  | Empty String |  |
 | localisation | The Country/County | {{ site.format.type.string255 }} | Limited to the one from your country. | Other |  |
@@ -30,7 +30,7 @@ p. JSON sample
   "label1": "567  Sutter St.",
   "label2": "",
   "label3": "",
-  "zipcode": "94102",
+  "zip_code": "94102",
   "city": "San Francisco",
   "country": "United States",
   "localisation": "California",
