--- a/docs/1.0/api/sales_order/index.textile
+++ b/docs/1.0/api/sales_order/index.textile
@@ -66,7 +66,7 @@ p. JSON response sample
     "label1": "5 Bvd Lenine",
     "label2": "Building H",
     "label3": "",
-    "zipcode": "5598 C",
+    "zip_code": "5598 C",
     "city": "Moscow",
     "country": "URSS",
     "localisation": "Florida",
@@ -108,7 +108,7 @@ p. JSON response sample
     "label1": "5 Bvd Lenine",
     "label2": "Building H",
     "label3": "",
-    "zipcode": "5598 C",
+    "zip_code": "5598 C",
     "city": "Moscow",
     "country": "URSS",
     "localisation": "Florida",
