--- a/docs/1.0/api/customer/index.textile
+++ b/docs/1.0/api/customer/index.textile
@@ -22,7 +22,7 @@ h3. Customers and Leads
 | phone_number | Phone Number | {{ site.format.type.string64 }} |  | Empty string |  |
 | email | Email address | {{ site.format.type.string255 }} |  | Empty string |  |
 | website | Website URL | {{ site.format.type.string255 }} |  | Empty string |  |
-| contacts | List of this customer's contact | {{ site.format.type.customer_contact }} |  | No Contact |=. {{ site.format.non_editable }} |
+| contacts | List of this customer's contact | {{ site.format.type.contact }} |  | No Contact |=. {{ site.format.non_editable }} |
 | payment_terms_id | Payment Terms | {{ site.format.type.long }} | IDs from "Payment terms":/docs/1.0/api/payment_term/#payment_terms_get | Due on receipt |  |
 | currency | Currency | {{ site.format.type.string4 }} | ISO Code from your Currencies | Your domain main currency |  |
 | sales_tax_id | Sales Tax | {{ site.format.type.long }} | IDs from Sales Tax | None |  |
@@ -128,7 +128,7 @@ h3. Resource Information
 * HTTP Methods: PUT
 * Body Format: JSON
 * Response Format: JSON
-* Non editable fields: id, full_name, contacts
+* Non editable fields: id, full_name
 
 h3. Example Request
 
@@ -230,7 +230,7 @@ h3. Resource Information
 * Body Format: JSON
 * Response Format: JSON
 * Mandatory fields for creation: type, status, company_name (for Company)/last_name (for Individual)
-* Non editable fields for edition: id, full_name, contacts
+* Non editable fields for edition: id, full_name
 
 h3. Example Request
 
