Add Vendor API to the documentation.

--- a/docs/1.0/api/contact/index.textile
+++ b/docs/1.0/api/contact/index.textile
@@ -7,7 +7,7 @@ span(anchor#format). ~
 
 h1(blue). Contact Format
 
-p. Contacts are used within "Customers":/docs/1.0/api/customer/#customer_format as a contact's list.
+p. Contacts are used within "Customers":/docs/1.0/api/customer/#customer_format or "Vendors":/docs/1.0/api/vendor/#vendor_format as a contact's list.
 
 
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} |_. {{ site.format.header.default }} |_. {{ site.format.header.non_editable }} |
