--- a/docs/1.0/api/unit/index.textile
+++ b/docs/1.0/api/unit/index.textile
@@ -10,7 +10,7 @@ h1(blue). Unit Format
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} |
 | id | Code | {{ site.format.type.long }} |  |
 | name | Name | {{ site.format.type.string64 }} |  |
-| type_id | Describe the kind of unit | {{ site.format.type.long }} | 1: Piece
+| type | Describe the kind of unit | {{ site.format.type.long }} | 1: Piece
 2: Weight
 3: Dimension
 4: Surface
@@ -43,7 +43,7 @@ p. JSON response sample
 {
   "id": 8,
   "name": "Day",
-  "type_id": 6
+  "type": 6
 }
 {% endhighlight %}
 
