--- a/docs/1.0/overview/support.textile
+++ b/docs/1.0/overview/support.textile
@@ -12,6 +12,11 @@ h3. API Documentation
 
 The official myERP documentation can be found on developers.myerp.com.
 
+
+h3. Stackoverflow
+
+We encourage you to use it as it tend to provide rapide and good quality answers. The myERP core team also tries to participate.
+
 h3. Email
 
 The last line of defense. If you have exhausted the above list of resources and feel confident your needs cannot be met there, is to use this support email: <a href="mailto:support@myerp.com" title="">support@myerp.com</a> and provide as much detail as possible.
