--- a/docs/1.0/api/payment_term/index.textile
+++ b/docs/1.0/api/payment_term/index.textile
@@ -5,7 +5,9 @@ title: "- REST API V1.0 Resources - Payment Term"
 
 span(anchor#format). ~ 
 
-h1(blue). Payment Term Format
+h1(blue). Format
+
+h3. Payment Term
 
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
 | id | Code | {{ site.format.type.long }} |
@@ -14,7 +16,7 @@ h1(blue). Payment Term Format
 
 span(anchor#payment_term_get). ~ 
 
-h2. GET payment_terms/:id
+h2(blue). GET payment_terms/:id
 
 p. Returns the code and the name of the payment term.
 
@@ -43,7 +45,7 @@ p. JSON response sample
 
 span(anchor#payment_terms_get). ~ 
 
-h2.  GET payment_terms
+h2(blue).  GET payment_terms
 
 p. Returns the list of all your payment terms.
 
