--- a/docs/1.0/api/index.textile
+++ b/docs/1.0/api/index.textile
@@ -67,7 +67,7 @@ Using the API, you can't edit any Accounting transaction, but you can create new
 
 |_(thead first). Type |_(thead). Description |
 |"GET ../transactions/:id":transaction/#transaction_get|Returns all the information about the accounting transaction. |
-|"DELETE ../order_lines/:id":transaction/#transaction_delete|Deletes a single accounting transaction. Only manual accounting transactions can be deleted.
+|"DELETE ../transactions/:id":transaction/#transaction_delete|Deletes a single accounting transaction. Only manual accounting transactions can be deleted.
 In order to delete other transactions, you need to deleted the related document (Invoice, Payment, etc...). |
 |"GET ../transactions":transaction/#transactions_get|Returns the list of all your accounting transactions. |
 |"POST ../transactions":transaction/#transactions_post|Create a single accounting transaction. |
