--- a/docs/1.0/api/entry/index.textile
+++ b/docs/1.0/api/entry/index.textile
@@ -15,7 +15,7 @@ p. Entries are the main content of any "Transaction":/docs/1.0/api/transaction/#
 | label | Description of that entry | {{ site.format.type.string128 }} |  | Empty String |
 | amount | This entry's amount | {{ site.format.type.double }} | Positive, will be rounded to two decimal places | {{ site.format.mandatory }} |
 | way | Defines if the amount is a Debit or a Credit | {{ site.format.type.string }} | "debit" or "credit" | {{ site.format.mandatory }} |
-| account_id | The accounting account | {{ site.format.type.long }} | IDs from "Accounts":/docs/1.0/api/accounts/#accounts_get (isFamily = false only) | {{ site.format.mandatory }} |
+| account_id | The accounting account | {{ site.format.type.integer }} | IDs from "Accounts":/docs/1.0/api/accounts/#accounts_get (isFamily = false only) | {{ site.format.mandatory }} |
 | account_label | The number and label of the accounting account | {{ site.format.type.string }} | {{ site.format.read_only }} | {{ site.format.non_available }} |
 | lettering | The lettering of this entry | {{ site.format.type.string64 }} |  | Empty String |
 
