--- a/docs/1.0/api/address/index.textile
+++ b/docs/1.0/api/address/index.textile
@@ -14,14 +14,14 @@ p. In myERP, addresses are used at several places. Accounts, Suppliers, Contacts
 
 
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} |_. {{ site.format.header.default }} |_. {{ site.format.header.non_editable }} |
-| label1 | First line of the address | {{ site.format.type.string255 }} |  | Empty String |  |
-| label2 | Second line of the address | {{ site.format.type.string255 }} |  | Empty String |  |
-| label3 | Third line of the address | {{ site.format.type.string255 }} |  | Empty String |  |
-| zip_code | The zipcode code | {{ site.format.type.string128 }} |  | Empty String |  |
-| city | The city name | {{ site.format.type.string128 }} |  | Empty String |  |
-| country | The country name | {{ site.format.type.string128 }} |  | Empty String |  |
-| localisation | The Country/County | {{ site.format.type.string255 }} | Limited to the one from your country. | Other |  |
-| short_localisation | The short code for the Country | {{ site.format.type.string10 }} | {{ site.format.read_only }} | {{ site.format.non_available }} |=. {{ site.format.non_editable }} |
+| label1 | First line of the address | {{ site.format.type.string }} |  | Empty String |  |
+| label2 | Second line of the address | {{ site.format.type.string }} |  | Empty String |  |
+| label3 | Third line of the address | {{ site.format.type.string }} |  | Empty String |  |
+| zip_code | The zipcode code | {{ site.format.type.string }} |  | Empty String |  |
+| city | The city name | {{ site.format.type.string }} |  | Empty String |  |
+| country | The country name | {{ site.format.type.string }} |  | Empty String |  |
+| localisation | The Country/County | {{ site.format.type.string }} | Limited to the one from your country. | Other |  |
+| short_localisation | The short code for the Country | {{ site.format.type.string }} | {{ site.format.read_only }} | {{ site.format.non_available }} |=. {{ site.format.non_editable }} |
 | full_address | The full formated adress 
 as it should appears on documents | {{ site.format.type.string }} | {{ site.format.read_only }} | {{ site.format.non_available }} |=. {{ site.format.non_editable }} |
 
